Fixed vehicles table alignment

--- a/src/pages/vehicles/vehicles.css
+++ b/src/pages/vehicles/vehicles.css
@@ -1,15 +1,16 @@
 /* vehicle.css */
 
 h1{
- position: relative;   
- text-align: center;
+ /* position: relative;    */
+ /* text-align: center; */
 }
 .vehicle-table {
     width: 100%;
     max-width: 500px;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     border-collapse: collapse;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0px 0px 15px 0px #6C6C6C40; */
     border-radius: 10px;
     overflow: hidden;
   }
